@@ -1,3 +1,9 @@
+2008-04-23 svu
+
+	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
+	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h:
+	more ISO-related functionality
+
 2008-04-21 svu
 
 	* configure.in, libxklavier/Makefile.am,
